# bad-docs

./: .env.example  .gitignore  README.md  add_embeddings.py  app.py  combine_text.sh  database_creation.sh  full_pipeline.sh  models.py  populate_json.py  pyproject.toml  updates.md
.devcontainer/: Dockerfile  devcontainer.json
pipeline/: _paths.py  add_embeddings.py  classify_status.py  combine_text.sh  data_cleaning.py  database_creation.sh  full_pipeline.sh  generate_json_from_combined.py  get_pdfs.sh  graph_making.py  images.sh  license_mutations.py  mod_alerts.py  ocr.sh  populate_json.py  repop_db.py  scrape.py
static/: style.css
templates/: base.html  contact.html  dataset.html  doctor.html  document_detail.html  index.html  keyword_detail.html  keywords.html  search.html  search_results.html  similarity_results.html  type.html
