[project]
name = "rathore-finalproj-baddocs"
version = "0.1.0"
description = "MD Medical Discipline Watch - Maryland Board of Physicians disciplinary records tracker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.0",
    "flask>=3.1.3",
    "gunicorn>=22.0.0",
    "llm>=0.29",
    "llm-embed-ollama>=0.1.3",
    "numpy>=2.4.3",
    "peewee>=4.0.2",
    "requests>=2.32.5",
    "sqlite-utils>=3.39",
    "git-filter-repo>=2.47.0",
]

[project.optional-dependencies]
pipeline = [
    "csvkit>=2.2.0",
    "llm-ollama>=0.15.1",
    "pandas>=3.0.1",
    "pdf2image-cli>=1.0.0",
]
